# mvp_allsports

./: Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-3066600182447128516.wt  collection-0-330303678912441313.wt  collection-2-330303678912441313.wt  collection-7-330303678912441313.wt  index-1-3066600182447128516.wt  index-1-330303678912441313.wt  index-3-330303678912441313.wt  index-8-330303678912441313.wt  index-9-330303678912441313.wt  nba_stats.xlsx  sizeStorer.wt
data/.mongodb/mongosh/: 67b21728c50e4920a0e43268_log  67b21729cbcccdbed7e43268_log  67b2172a61b66ba462e43268_log  config
data/diagnostic.data/: metrics.2025-02-16T16-49-44Z-00000  metrics.2025-02-16T17-01-57Z-00000  metrics.interim
src/: class.py  insert.py  main.py  quickstart.py
src/api_requests/: nba_requests.py  player_profile.py  team_profile.py
src/mongodb/: extract.py  insert.py  load.py  quickstart.py
src/nba/: league_hierarchy.py  player_profile.py  team_profile.py
src/utils/: mongodb.py  odds_pipeline.py  odds_player_props.py  player_props_pipeline.py  request_odds.py  request_player_props.py
tests/: test_mongodb.py  test_odds_pipeline.py  test_odds_player_props.py  test_player_props_pipeline.py  test_request_odds.py  test_request_player_props.py
